--- a/app/views/admin/citations/index.html.erb
+++ b/app/views/admin/citations/index.html.erb
@@ -15,6 +15,7 @@
       <table>
         <thead>
           <tr>
+            <th>ID</th>
             <th>Citation</th>
             <th>Author(s)</th>
           </tr>
@@ -23,13 +24,14 @@
           <% unless @citations.empty? %>
             <% @citations.each do |citation| -%>
               <tr class="<%= cycle('odd', 'even') %>">
+                <td><%= citation.id %></td>
                 <td><%= link_to citation.description, edit_admin_citation_path(citation) %></td>
                 <td><%= citation.authors %></td>
               </tr>
             <% end -%>
           <% else -%>
             <tr>
-              <td colspan="2">There are no citations</td>
+              <td colspan="3">There are no citations</td>
             </tr>
           <% end -%>
         </tbody>
