--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -26,7 +26,7 @@
             <% unless @events.empty? %>
               <% @events.each do |event| -%>
                 <tr class="<%= cycle('odd', 'even') %>">
-                  <td><%= event.ID %></td>
+                  <td><%= event.id %></td>
                   <td><%= link_to event.name, edit_admin_event_path(event) %></td>
                   <td><%= event.code %></td>
                   <td>
