--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Translating Time</title>
   <%= stylesheet_link_tag  "site", :media => "all" %>
-  <link rel="shortcut icon" href="/assets/favicon.ico" />
+  <link rel="shortcut icon" href="/images/favicon.ico" />
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
@@ -22,7 +22,7 @@
               <li><%= link_to item.title, '/'+item.url %></li>
             <% end  %>
           </ul>
-          <img src="/assets/sidebar.jpg">
+          <img src="/images/sidebar.jpg">
         </div>
       </div>
       <div class="content">
