--- a/app/assets/stylesheets/admin/layout.css.scss
+++ b/app/assets/stylesheets/admin/layout.css.scss
@@ -4,7 +4,7 @@ header {
   h1 a { color: #000 !important; }
   presence {
     float: right; position: relative;
-    strong { display: block; background: url(/assets/dropdown.png) no-repeat 95% 13px; padding: 5px 15px 5px 10px; height: 30px; cursor: pointer; }
+    strong { display: block; background: url(/images/dropdown.png) no-repeat 95% 13px; padding: 5px 15px 5px 10px; height: 30px; cursor: pointer; }
     ul { position: absolute; top: 30px; right: 0; display: none; }
     a { display: block; width: 120px; background-color: #EEEEEE; padding: 5px 10px; }
     a:hover { background-color: #DDDDDD; }
