--- a/app/assets/stylesheets/site/form.css.scss
+++ b/app/assets/stylesheets/site/form.css.scss
@@ -2,13 +2,13 @@ div.flash {
   overflow: hidden; min-height: 10px; color: #666; margin: 0 0 10px; padding: 5px 25px 5px 30px;position: relative;
   span { position: absolute; top: 5px; right: 5px; padding: 4px; cursor: pointer; font-size: 12px; line-height: 12px; }
   strong { color: #000; }
-  &.success { border: 1px solid #B3DC6C; background: #EAF5DC url(/assets/tick.png) no-repeat 7px 7px; }
+  &.success { border: 1px solid #B3DC6C; background: #EAF5DC url(/images/tick.png) no-repeat 7px 7px; }
   &.success span { color: #AD7;  }
   &.success span:hover { background-color: #AD7; color: #FFF; }
-  &.warning { border: 1px solid #E2C822; background: #FFF9D7 url(/assets/warning.png) no-repeat 7px 7px; }
+  &.warning { border: 1px solid #E2C822; background: #FFF9D7 url(/images/warning.png) no-repeat 7px 7px; }
   &.warning span { color: #E2C822;  }
   &.warning span:hover { background-color: #E2C822; color: #FFF; }
-  &.error { border: 1px solid #900; background: #900 url(/assets/error.png) no-repeat 7px 7px; color: #FFF; }
+  &.error { border: 1px solid #900; background: #900 url(/images/error.png) no-repeat 7px 7px; color: #FFF; }
   &.error strong { color: #FFC; }
   &.error span { color: #FFF;  }
   &.error span:hover { background-color: #900; color: #FFF; }
