implementing dataset processing

--- a/app/views/admin/datasets/_form.html.erb
+++ b/app/views/admin/datasets/_form.html.erb
@@ -1,35 +1,2 @@
-<%= f.text_field_control @species, :name, { :required => true } %>
-
-<%= f.text_field_control @species, :scientific_name %>
-
-<%= f.text_field_control @species, :code %>
-
-<%= f.text_field_control @species, :constant, {}, { :maxlength => 8 } %>
-
-<%= f.text_field_control @species, :slope, {}, { :maxlength => 8 } %>
-
-<%= f.text_field_control @species, :precocial_score %>
-
-<%= f.text_field_control @species, :brain %>
-
-<%= f.text_field_control @species, :weight %>
-
-<%= f.text_field_control @species, :gestation %>
-
-<dt><%= f.label :in_model, "In Model?" %></dt>
-<dd><%= f.check_box :in_model %></dd>
-
-</dl>
-
-<% if Taxonomy.roots.count > 0 %>
-
-  <h2>Classifications</h2>
-  
-  <dl>
-    <% Taxonomy.roots.each do |taxonomy| %>
-      <dt><label><%= taxonomy.name %></label></dt>
-      <dd><%= select_tag "species[taxonomy_ids][]", options_from_collection_for_select(taxonomy.children.order("name ASC"), :id, :name, @species.taxonomy_ids), :include_blank => true %></dd>
-    <% end %>
-  </dl>
-
-<% end %>
+<% options = options_from_collection_for_select(Model.order("created_at DESC").all, :id, :id, @dataset.model_id) %>
+<%= f.select_control @dataset, :model_id, { :required => true }, { :include_blank => '', :options => options } %>
