--- a/app/views/admin/datasets/index.html.erb
+++ b/app/views/admin/datasets/index.html.erb
@@ -1,44 +1,38 @@
 <% content_for :breadcrumbs do -%>
   <%= link_to 'Dashboard', admin_dashboard_path %> &raquo;
-  <strong>Species</strong>
+  <strong>Datasets</strong>
 <% end -%>
 
 <% content_for :main do %>
   <div class="grid">
     <div class="grid-header">
       <ul>
-        <li><%= link_to "+ Add New", new_admin_species_path %></li>
+        <li><%= link_to "+ Create New", new_admin_dataset_path %></li>
       </ul>
     </div>
     <div class="grid-body">
       <table>
         <thead>
           <tr>
-            <th width="60%">Species</th>
-            <th width="20%">Code</th>
-            <th width="10%">In Model</th>
-            <th width="10%">Action</th>
+            <th width="60%">ID</th>
+            <th width="20%">Model</th>
+            <th width="10%">Status</th>
+            <th width="10%">Created_at</th>
           </tr>
         </thead>
         <tbody>
-          <% unless @species.empty? %>
-            <% @species.each do |species| -%>
+          <% unless @datasets.empty? %>
+            <% @datasets.each do |dataset| -%>
               <tr class="<%= cycle('odd', 'even') %>">
-                <td><%= link_to species.name, edit_admin_species_path(species) %></td>
-                <td><%= species.code %></td>
-                <td>
-                  <% if species.in_model %>
-                    <span class="yes">YES</span>
-                  <% else %>
-                    <span class="no">NO</span>
-                  <% end %>
-                </td>
-                <td align="center"><%= link_to 'delete', delete_admin_species_path(species) %></td>
+                <td><%= link_to dataset.id, admin_dataset_path(dataset) %></td>
+                <td><%= dataset.model_id %></td>
+                <td><%= dataset.status.upcase %></td>
+                <td><%= dataset.created_at.strftime("%m/%d/%Y") %></td>
               </tr>
             <% end -%>
           <% else -%>
             <tr>
-              <td colspan="3">There are no species</td>
+              <td colspan="4"">There are no datasets</td>
             </tr>
           <% end -%>
         </tbody>
