--- a/app/views/admin/species/new.html.erb
+++ b/app/views/admin/species/new.html.erb
@@ -6,7 +6,7 @@
 
 <% content_for :main do %>
   <%= form_for @species, { :url => admin_species_index_path } do |f| -%>
-    <div class="form" id="new_species">
+    <div class="form">
       <div class="form-header">
         <h2>Species Details</h2>
       </div>
