--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Translating Time</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
