rename models as algorithms

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -47,7 +47,7 @@
       <li><%= link_to 'Export Observations', admin_export_observations_path(:format => 'txt') %></li>
       <li><%= link_to 'Export Species', admin_export_species_path(:format => 'txt') %></li>
       <li><%= link_to 'Export Events', admin_export_events_path(:format => 'txt') %></li>
-      <li><%= link_to 'Manage Models', admin_models_path %></li>
+      <li><%= link_to 'Manage Algorithm', admin_models_path %></li>
       <li><%= link_to 'Manage Datasets', admin_datasets_path %></li>
       <li><%= link_to 'Compare Datasets', compare_admin_datasets_path %></li>
     </ul>
