adding edit and delete and descriptions to datasets

--- a/app/views/admin/datasets/_form.html.erb
+++ b/app/views/admin/datasets/_form.html.erb
@@ -1,2 +1,3 @@
 <% options = options_from_collection_for_select(Model.order("created_at DESC").all, :id, :id, @dataset.model_id) %>
-<%= f.select_control @dataset, :model_id, { :required => true }, { :include_blank => '', :options => options } %>
+<%= f.select_control @dataset, :model_id, { :text => 'Algorithm', :required => true }, { :include_blank => '', :options => options } %>
+<%= f.text_area_control @dataset, :description %>
