--- a/app/views/admin/datasets/delete.html.erb
+++ b/app/views/admin/datasets/delete.html.erb
@@ -1,34 +1,17 @@
 <% content_for :breadcrumbs do -%>
   <%= link_to 'Dashboard', admin_dashboard_path %> &raquo;
-  <%= link_to 'Species', admin_species_path %> &raquo;
-  <strong>Delete Species</strong>
+  <%= link_to 'Datasets', admin_datasets_path %> &raquo;
+  <strong>Delete Dataset</strong>
 <% end -%>
 
 <% content_for :main do %>
-  <%= form_tag(admin_species_path(@species), :method => :delete) do %>
-    <div class="form" id="new_species">
+  <%= form_tag(admin_dataset_path(@dataset), :method => :delete) do %>
+    <div class="form" id="new_dataset">
       <div class="form-header">
-        <h2>Delete species</h2>
+        <h2>Delete Dataset</h2>
       </div>
       <div class="form-body">
-        <% unless @species.observations.empty? %>
-          <p><strong>WARNING:</strong> There are <%= @species.observations.count %> observations attached to this species! Would you prefer to:</p>
-          <ul>
-            <li>
-              <label for="strategy_delete">
-                <%= radio_button_tag 'strategy', 'delete', (params[:strategy] == 'delete') %> delete them along with this species
-              </label>
-            </li>
-            <li>
-              <label for="strategy_move">
-                <%= radio_button_tag 'strategy', 'move', (params[:strategy] == 'move') %> attach them to 
-              </label>
-              <%= select_tag 'species_id', options_from_collection_for_select(Species.where('id != ?', @species.id).all, :id, :name) %>
-            </li>
-          </ul>
-        <% else -%>
-          <p>Are you sure you want to delete this species?</p>
-        <% end -%>
+        <p>Are you sure you want to delete this dataset?</p>
       </div>
       <div class="form-footer">
         <ul>
