--- a/app/views/admin/datasets/edit.html.erb
+++ b/app/views/admin/datasets/edit.html.erb
@@ -1,23 +1,23 @@
 <% content_for :breadcrumbs do -%>
   <%= link_to 'Dashboard', admin_dashboard_path %> &raquo;
-  <%= link_to 'Species', admin_species_index_path %> &raquo;
-  <strong>Edit Species</strong>
+  <%= link_to 'Datasets', admin_datasets_path %> &raquo;
+  <strong>Edit Dataset</strong>
 <% end -%>
 
 <% content_for :main do %>
-  <%= form_for @species, { :url => admin_species_path(@species) } do |f| -%>
+  <%= form_for @dataset, { :url => admin_dataset_path(@dataset) } do |f| -%>
     <div class="form" id="new_species">
       <div class="form-header">
-        <h2>Species Details</h2>
+        <h2>Dataset Details</h2>
       </div>
       <div class="form-body">
         <dl>
-          <%= render 'form', :f => f %>
+          <%= f.text_area_control @dataset, :description %>
         </dl>
       </div>
       <div class="form-footer">
         <ul>
-          <li><%= link_to 'Cancel', admin_species_index_path, :class => 'cancel' %></li>
+          <li><%= link_to 'Cancel', admin_datasets_path, :class => 'cancel' %></li>
           <li><%= f.submit 'Save', :class => 'button' %></li>
         </ul>
       </div>
