--- a/app/views/admin/datasets/index.html.erb
+++ b/app/views/admin/datasets/index.html.erb
@@ -14,11 +14,14 @@
       <table>
         <thead>
           <tr>
-            <th width="60%">ID</th>
-            <th width="20%">Model</th>
+            <th width="5%">ID</th>
+            <th width="35%">Description</th>
+            <th width="10%">Algorithm</th>
+            <th width="10%">User</th>
             <th width="10%">Status</th>
-            <th width="10%">Created_at</th>
+            <th width="10%">Created At</th>
             <th width="10%">Active</th>
+            <th width="10%">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -26,15 +29,21 @@
             <% @datasets.each do |dataset| -%>
               <tr class="<%= cycle('odd', 'even') %>">
                 <td><%= link_to dataset.id, admin_dataset_path(dataset) %></td>
+                <td><%= dataset.description %></td>
                 <td><%= dataset.model_id %></td>
+                <td><%= dataset.user.full_name %></td>
                 <td><%= dataset.status.upcase %></td>
-                <td><%= dataset.created_at.strftime("%m/%d/%Y") %></td>
+                <td><%= dataset.created_at.strftime("%m/%d/%Y @ %I:%M %p") %></td>
                 <td>
                   <% if dataset.is_active %>
                     <span class="yes">YES</span>
                   <% else %>
                     <span class="no">NO</span>
                   <% end %>
+                </td>
+                <td align="center">
+                  <%= link_to 'edit', edit_admin_dataset_path(dataset) %> |
+                  <%= link_to 'delete', delete_admin_dataset_path(dataset) %>
                 </td>
               </tr>
             <% end -%>
