--- a/app/views/admin/datasets/index.html.erb
+++ b/app/views/admin/datasets/index.html.erb
@@ -14,8 +14,8 @@
       <table>
         <thead>
           <tr>
-            <th width="5%">ID</th>
-            <th width="35%">Description</th>
+            <th width="2%">ID</th>
+            <th width="38a%">Description</th>
             <th width="10%">Algorithm</th>
             <th width="10%">User</th>
             <th width="10%">Status</th>
