implementing remaining functionality

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -50,6 +50,7 @@
       <li><%= link_to 'Manage Algorithm', admin_models_path %></li>
       <li><%= link_to 'Manage Datasets', admin_datasets_path %></li>
       <li><%= link_to 'Compare Datasets', compare_admin_datasets_path %></li>
+      <li><%= link_to 'Upload Confidence', admin_confidence_path %></li>
     </ul>
   </section>
 
