--- a/app/views/tables/index.html.erb
+++ b/app/views/tables/index.html.erb
@@ -10,18 +10,7 @@
       <% end %>
     </select>
   </p>
-  
-  <h3>95% Confidence Intervals*</h3>
-  <p>
-    * Confidence intervals are for species averages rather than for individuals.<br />
-    <select>
-      <option></option>
-      <% Species.in_model.all.each do |species| %>
-        <option value="/tables/estimates/<%= species.id %>"><%= species.name %></option>
-      <% end %>
-    </select>
-  </p>
-  
+
   <h3>Events</h3>
   <p>
     <select>
@@ -33,7 +22,13 @@
   </p>
 
   <p><a href="/tables/abbreviations">Click here</a> for Abbreviations.</p>
-  
+
+  <h3>95% Confidence Intervals*</h3>
+  <p>
+    * Confidence intervals are for species averages rather than for individuals.<br />
+    <img src="/images/confidence.jpg" style="width:100%;" />
+  </p>
+
   <script>
     $(document).ready(function(){
       $('select').change(function() {
