--- a/app/views/admin/datasets/show.csv.erb
+++ b/app/views/admin/datasets/show.csv.erb
@@ -1,3 +1,3 @@
 ,<%= @species.map { |s| s.code }.join(",") %>
-<% @events.each do |event| %><%= event.code %>,<% @species.each do |species| %><% if @grid.has_key?(species.id) %><% if @grid[species.id].has_key?(event.id) %><%= number_with_precision(@grid[species.id][event.id].value, :precision => 1) %><% else %><% end %>,<% end %><% end %>
+<% @events.each do |event| %><%= event.code %>,<% @species.each do |species| %><% if @grid.has_key?(species.id) %><% if @grid[species.id].has_key?(event.id) %><%= number_with_precision(@grid[species.id][event.id].value, :precision => 1) %><% end %><% end %>,<% end %>
 <% end %>
